--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:prettier": "prettier --check \"src/**/*.ts\"",
     "lint:tslint": "tslint --project .",
     "lint": "yarn lint:prettier && yarn lint:tslint",
-    "type-check": "yarn build --noEmit"
+    "type-check": "yarn build --noEmit",
+    "prepublish": "yarn format && yarn lint && yarn test && yarn build"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
