--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/jest": "^24.0.15",
     "@types/koa": "^2.0.49",
     "@types/node": "^12.6.1",
-    "@types/node-fetch": "^2.3.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "form-data": "^2.5.0",
@@ -36,6 +35,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "@types/node-fetch": "^2.3.7"
   }
 }
