--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@michaelhelvey/microtest",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Simple, functional testing utility for Node.js APIs",
   "main": "build/index.js",
   "repository": "https://github.com/michaelhelvey/microtest",
@@ -21,6 +21,7 @@
     "@types/jest": "^24.0.15",
     "@types/koa": "^2.0.49",
     "@types/node": "^12.6.1",
+    "apollo-server": "^2.9.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "form-data": "^2.5.0",
@@ -35,7 +36,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "node-fetch": "^2.6.0",
-    "@types/node-fetch": "^2.3.7"
+    "@types/node-fetch": "^2.3.7",
+    "node-fetch": "^2.6.0"
   }
 }
