--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"*.{ts,js,json}": "prettier --write"
 	},
 	"devDependencies": {
-		"@types/node": "^18.7.23",
+		"@types/node": "16",
+		"@types/qs": "^6.9.7",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
 		"@typescript-eslint/parser": "^5.38.1",
 		"@vitest/coverage-c8": "^0.23.4",
@@ -56,5 +57,10 @@
 		"vite": "^3.1.4",
 		"vite-tsconfig-paths": "^3.5.1",
 		"vitest": "^0.23.4"
+	},
+	"dependencies": {
+		"form-data": "^4.0.0",
+		"node-fetch": "^3.2.10",
+		"qs": "^6.11.0"
 	}
 }
