--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"*.{ts,js,json}": "prettier --write"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.14",
 		"@types/node": "16",
 		"@types/qs": "^6.9.7",
 		"@typescript-eslint/eslint-plugin": "^5.38.1",
@@ -48,6 +49,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-jest": "^27.0.4",
 		"eslint-plugin-node": "^11.1.0",
+		"express": "^4.18.1",
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.3",
 		"prettier": "^2.7.1",
@@ -59,6 +61,7 @@
 		"vitest": "^0.23.4"
 	},
 	"dependencies": {
+		"chalk": "^5.0.1",
 		"form-data": "^4.0.0",
 		"node-fetch": "^3.2.10",
 		"qs": "^6.11.0"
