add github pages docs

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,8 +11,8 @@ on:
 
 jobs:
     build:
+        name: 💿 Build & Test
         runs-on: ubuntu-latest
-
         strategy:
             matrix:
                 node-version: [16]
