chore(package): add homepage an repository to package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "@michaelhelvey/microtest",
 	"version": "2.0.0",
 	"description": "Simple fetch-based integration testing library for Node.js",
+	"homepage": "https://github.com/michaelhelvey/microtest",
+	"repository": "github:michaelhelvey/microtest",
 	"keywords": [
 		"testing",
 		"api",
