--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@michaelhelvey/microtest",
-	"version": "2.1.0",
+	"version": "2.1.1",
 	"description": "Simple fetch-based integration testing library for Node.js",
 	"homepage": "https://github.com/michaelhelvey/microtest",
 	"repository": "github:michaelhelvey/microtest",
@@ -23,19 +23,19 @@
 	],
 	"license": "MIT",
 	"sideEffects": false,
-	"type": "module",
+	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"exports": {
 		".": {
-			"require": "./dist/index.cjs",
-			"import": "./dist/index.js"
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs"
 		}
 	},
 	"scripts": {
 		"test": "vitest",
 		"test:coverage": "vitest --coverage",
 		"lint": "eslint src --cache --ext .js,.jsx,.ts,.tsx",
-		"build": "tsup-node ./src/index.ts --format esm --dts --target=es2021 --clean",
+		"build": "tsup-node ./src/index.ts --format esm,cjs --dts --target=es2021 --clean",
 		"format": "prettier --write src/**/*.ts",
 		"typecheck": "tsc --noEmit",
 		"validate": "pnpm lint && pnpm test -- run && pnpm typecheck && pnpm build",
@@ -54,34 +54,34 @@
 		"*.{ts,js,json}": "prettier --write"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.14",
-		"@types/node": "16",
-		"@types/qs": "^6.9.7",
-		"@typescript-eslint/eslint-plugin": "^5.38.1",
-		"@typescript-eslint/parser": "^5.38.1",
-		"@vitest/coverage-c8": "^0.23.4",
-		"eslint": "^8.24.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-jest": "^27.0.4",
+		"@types/express": "^4.17.18",
+		"@types/node": "^20.7.2",
+		"@types/qs": "^6.9.8",
+		"@typescript-eslint/eslint-plugin": "^6.7.3",
+		"@typescript-eslint/parser": "^6.7.3",
+		"@vitest/coverage-c8": "^0.33.0",
+		"eslint": "^8.50.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-jest": "^27.4.0",
 		"eslint-plugin-node": "^11.1.0",
-		"express": "^4.18.1",
-		"husky": "^8.0.1",
-		"lint-staged": "^13.0.3",
+		"express": "^4.18.2",
+		"husky": "^8.0.3",
+		"lint-staged": "^14.0.1",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.7.1",
-		"serve": "^14.0.1",
-		"tsup": "^6.2.3",
-		"tsx": "^3.9.0",
-		"typedoc": "^0.23.15",
-		"typescript": "4.8.4",
-		"vite": "^3.1.4",
-		"vite-tsconfig-paths": "^3.5.1",
-		"vitest": "^0.23.4"
+		"prettier": "^3.0.3",
+		"serve": "^14.2.1",
+		"tsup": "^7.2.0",
+		"tsx": "^3.13.0",
+		"typedoc": "^0.25.1",
+		"typescript": "5.2.2",
+		"vite": "^4.4.9",
+		"vite-tsconfig-paths": "^4.2.1",
+		"vitest": "^0.34.6"
 	},
 	"dependencies": {
-		"chalk": "^5.0.1",
+		"chalk": "^5.3.0",
 		"form-data": "^4.0.0",
-		"node-fetch": "^3.2.10",
-		"qs": "^6.11.0"
+		"node-fetch": "^3.3.2",
+		"qs": "^6.11.2"
 	}
 }
