--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
 		"types": ["vitest/globals"],
 		"target": "ES2020",
 		"strict": true,
-		"module": "NodeNext",
-		"moduleResolution": "node",
+		"module": "ESNext",
+		"moduleResolution": "Bundler",
 		"noUncheckedIndexedAccess": true,
 		"exactOptionalPropertyTypes": true,
 		"esModuleInterop": true,
