update all deps to latest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
 			"~/*": ["./src/*"]
 		}
 	},
-	"include": ["**/*.ts", "**/*.js", "*.js", "*.ts", "*.cts"]
+	"include": ["**/*.ts", "**/*.js", "*.js", "*.ts", "*.mts"]
 }
