--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@michaelhelvey/microtest",
-	"version": "2.1.1",
+	"version": "2.1.2",
 	"description": "Simple fetch-based integration testing library for Node.js",
 	"homepage": "https://github.com/michaelhelvey/microtest",
 	"repository": "github:michaelhelvey/microtest",
@@ -16,6 +16,7 @@
 		"email": "michael.helvey1@gmail.com",
 		"url": "https://michaelhelvey.dev"
 	},
+	"packageManager": "pnpm@8.15.5",
 	"files": [
 		"README.md",
 		"package.json",
@@ -54,34 +55,34 @@
 		"*.{ts,js,json}": "prettier --write"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.18",
-		"@types/node": "^20.7.2",
-		"@types/qs": "^6.9.8",
-		"@typescript-eslint/eslint-plugin": "^6.7.3",
-		"@typescript-eslint/parser": "^6.7.3",
-		"@vitest/coverage-c8": "^0.33.0",
-		"eslint": "^8.50.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-jest": "^27.4.0",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.11.30",
+		"@types/qs": "^6.9.14",
+		"@typescript-eslint/eslint-plugin": "^7.4.0",
+		"@typescript-eslint/parser": "^7.4.0",
+		"@vitest/coverage-v8": "^1.4.0",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-jest": "^27.9.0",
 		"eslint-plugin-node": "^11.1.0",
-		"express": "^4.18.2",
-		"husky": "^8.0.3",
-		"lint-staged": "^14.0.1",
+		"express": "^4.19.2",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.2",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^3.0.3",
+		"prettier": "^3.2.5",
 		"serve": "^14.2.1",
-		"tsup": "^7.2.0",
-		"tsx": "^3.13.0",
-		"typedoc": "^0.25.1",
-		"typescript": "5.2.2",
-		"vite": "^4.4.9",
-		"vite-tsconfig-paths": "^4.2.1",
-		"vitest": "^0.34.6"
+		"tsup": "^8.0.2",
+		"tsx": "^4.7.1",
+		"typedoc": "^0.25.12",
+		"typescript": "5.4.3",
+		"vite": "^5.2.6",
+		"vite-tsconfig-paths": "^4.3.2",
+		"vitest": "^1.4.0"
 	},
 	"dependencies": {
 		"chalk": "^5.3.0",
 		"form-data": "^4.0.0",
 		"node-fetch": "^3.3.2",
-		"qs": "^6.11.2"
+		"qs": "^6.12.0"
 	}
 }
