--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -15,7 +15,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                node-version: [20]
+                node-version: [16, 18, 20]
         steps:
             - uses: actions/checkout@v4
             - uses: pnpm/action-setup@v3
